--- a/nginx.conf
+++ b/nginx.conf
@@ -16,15 +16,16 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log debug;
 
-    map $http_origin $cors {
+    # CORS configuration
+    map $http_origin $cors_origin {
         default "";
-        ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
-        "http://localhost" $http_origin;  # Allow localhost for development
+        "~^https?://[^/]+\.cvirko-vadim\.ru(:[0-9]+)?$" "$http_origin";
+        "http://localhost" $http_origin;
     }
 
     upstream nextjs {
         server nextjs-app:3000;
-        keepalive 32;  # Keep connections alive
+        keepalive 32;
     }
 
     # HTTP server (redirect to HTTPS)
@@ -40,37 +41,38 @@ http {
         # Root directory for static files
         root /app;
 
-        # Serve static files directly
-        location /public {
-            root /app;
-            try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000";
-            access_log off;
+        # Common static files
+        location /_next/static/ {
+            alias /app/.next/static/;
+            expires max;
+            add_header Cache-Control "public, no-transform";
         }
 
-        location /_next/static {
-            root /app;
+        location /images/ {
+            alias /app/public/images/;
+            expires max;
+            add_header Cache-Control "public, no-transform";
             try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000";
-            access_log off;
         }
 
-        location /images {
-            alias /app/public/images;
+        location /public/ {
+            alias /app/public/;
+            expires max;
+            add_header Cache-Control "public, no-transform";
             try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000";
-            access_log off;
-            
-            # Debug logging
-            error_log /var/log/nginx/images_debug.log debug;
-            
-            # Add CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' '*' always;
         }
 
-        # For all other requests, proxy to Next.js
+        # Next.js static chunks
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Handle all other requests
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -78,22 +80,23 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            
+
             # Increase timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
             # CORS headers
-            add_header 'Access-Control-Allow-Origin' $cors always;
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' '*' always;
-            
-            # Handle preflight requests
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' $cors;
+                add_header 'Access-Control-Allow-Origin' $cors_origin;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' '*';
+                add_header 'Access-Control-Allow-Credentials' 'true';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Type' 'text/plain charset=UTF-8';
                 add_header 'Content-Length' 0;
@@ -115,6 +118,38 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
+        # Common static files
+        location /_next/static/ {
+            alias /app/.next/static/;
+            expires max;
+            add_header Cache-Control "public, no-transform";
+        }
+
+        location /images/ {
+            alias /app/public/images/;
+            expires max;
+            add_header Cache-Control "public, no-transform";
+            try_files $uri $uri/ =404;
+        }
+
+        location /public/ {
+            alias /app/public/;
+            expires max;
+            add_header Cache-Control "public, no-transform";
+            try_files $uri $uri/ =404;
+        }
+
+        # Next.js static chunks
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Handle all other requests
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -122,41 +157,28 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            
+
             # Increase timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
             # CORS headers
-            add_header 'Access-Control-Allow-Origin' $cors always;
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' '*' always;
-        }
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-        location /_next/ {
-            proxy_pass http://nextjs;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header Host $host;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header Host $host;
-        }
-
-        # Serve static files from public directory
-        location /_next/static/ {
-            alias /app/.next/static/;
-            expires 365d;
-            access_log off;
-        }
-
-        location /public/ {
-            alias /app/public/;
-            expires 365d;
-            access_log off;
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_origin;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' '*';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
     }
 }
