--- a/nginx.conf
+++ b/nginx.conf
@@ -41,25 +41,52 @@ http {
         # Root directory for static files
         root /app;
 
-        # Common static files
+        # Next.js static files
         location /_next/static/ {
-            alias /app/.next/static/;
-            expires max;
-            add_header Cache-Control "public, no-transform";
-        }
-
-        location /images/ {
-            alias /app/public/images/;
-            expires max;
-            add_header Cache-Control "public, no-transform";
+            root /app;
             try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
         }
 
+        # Next.js media files
+        location /_next/static/media/ {
+            alias /app/.next/static/media/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
+        }
+
+        # Next.js CSS files
+        location /_next/static/css/ {
+            alias /app/.next/static/css/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
+        }
+
+        # Next.js chunks
+        location /_next/static/chunks/ {
+            alias /app/.next/static/chunks/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
+        }
+
+        # Public files
         location /public/ {
             alias /app/public/;
-            expires max;
-            add_header Cache-Control "public, no-transform";
             try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000";
+            access_log off;
+        }
+
+        # Images
+        location /images/ {
+            alias /app/public/images/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000";
+            access_log off;
         }
 
         # Next.js static chunks
@@ -118,25 +145,52 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
-        # Common static files
+        # Next.js static files
         location /_next/static/ {
-            alias /app/.next/static/;
-            expires max;
-            add_header Cache-Control "public, no-transform";
-        }
-
-        location /images/ {
-            alias /app/public/images/;
-            expires max;
-            add_header Cache-Control "public, no-transform";
+            root /app;
             try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
         }
 
+        # Next.js media files
+        location /_next/static/media/ {
+            alias /app/.next/static/media/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
+        }
+
+        # Next.js CSS files
+        location /_next/static/css/ {
+            alias /app/.next/static/css/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
+        }
+
+        # Next.js chunks
+        location /_next/static/chunks/ {
+            alias /app/.next/static/chunks/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
+        }
+
+        # Public files
         location /public/ {
             alias /app/public/;
-            expires max;
-            add_header Cache-Control "public, no-transform";
             try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000";
+            access_log off;
+        }
+
+        # Images
+        location /images/ {
+            alias /app/public/images/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000";
+            access_log off;
         }
 
         # Next.js static chunks
