--- a/nginx.conf
+++ b/nginx.conf
@@ -42,61 +42,31 @@ http {
         root /app;
 
         # Next.js static files
-        location /_next/static/ {
-            root /app;
-            try_files $uri $uri/ =404;
+        location /_next/ {
+            alias /app/.next/;
+            expires max;
             add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-        }
-
-        # Next.js media files
-        location /_next/static/media/ {
-            alias /app/.next/static/media/;
-            try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-        }
-
-        # Next.js CSS files
-        location /_next/static/css/ {
-            alias /app/.next/static/css/;
-            try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-        }
-
-        # Next.js chunks
-        location /_next/static/chunks/ {
-            alias /app/.next/static/chunks/;
-            try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
         }
 
         # Public files
         location /public/ {
             alias /app/public/;
-            try_files $uri $uri/ =404;
+            expires max;
             add_header Cache-Control "public, max-age=31536000";
-            access_log off;
         }
 
         # Images
         location /images/ {
             alias /app/public/images/;
-            try_files $uri $uri/ =404;
+            expires max;
             add_header Cache-Control "public, max-age=31536000";
-            access_log off;
         }
 
         # Next.js static chunks
-        location /_next/ {
-            proxy_pass http://nextjs;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+        location /_next/static/ {
+            alias /app/.next/static/;
+            expires max;
+            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         # Handle all other requests
@@ -107,7 +77,7 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-
+            
             # Increase timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
@@ -146,61 +116,31 @@ http {
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
         # Next.js static files
-        location /_next/static/ {
-            root /app;
-            try_files $uri $uri/ =404;
+        location /_next/ {
+            alias /app/.next/;
+            expires max;
             add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-        }
-
-        # Next.js media files
-        location /_next/static/media/ {
-            alias /app/.next/static/media/;
-            try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-        }
-
-        # Next.js CSS files
-        location /_next/static/css/ {
-            alias /app/.next/static/css/;
-            try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-        }
-
-        # Next.js chunks
-        location /_next/static/chunks/ {
-            alias /app/.next/static/chunks/;
-            try_files $uri $uri/ =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
         }
 
         # Public files
         location /public/ {
             alias /app/public/;
-            try_files $uri $uri/ =404;
+            expires max;
             add_header Cache-Control "public, max-age=31536000";
-            access_log off;
         }
 
         # Images
         location /images/ {
             alias /app/public/images/;
-            try_files $uri $uri/ =404;
+            expires max;
             add_header Cache-Control "public, max-age=31536000";
-            access_log off;
         }
 
         # Next.js static chunks
-        location /_next/ {
-            proxy_pass http://nextjs;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+        location /_next/static/ {
+            alias /app/.next/static/;
+            expires max;
+            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         # Handle all other requests
@@ -211,7 +151,7 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-
+            
             # Increase timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
