--- a/nginx.conf
+++ b/nginx.conf
@@ -9,23 +9,20 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
 
     # Logging configuration
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log debug;
 
-    # CORS configuration
-    map $http_origin $cors_origin {
+    map $http_origin $cors {
         default "";
-        "~^https?://[^/]+\.cvirko-vadim\.ru(:[0-9]+)?$" "$http_origin";
-        "http://localhost" $http_origin;
+        ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
+        "http://localhost" $http_origin;  # Allow localhost for development
     }
 
     upstream nextjs {
         server nextjs-app:3000;
-        keepalive 32;
+        keepalive 32;  # Keep connections alive
     }
 
     # HTTP server (redirect to HTTPS)
@@ -38,38 +35,7 @@ http {
             return 301 https://$host$request_uri;
         }
 
-        # Root directory for static files
-        root /app;
-
-        # Next.js static files
-        location /_next/ {
-            alias /app/.next/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-        }
-
-        # Public files
-        location /public/ {
-            alias /app/public/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000";
-        }
-
-        # Images
-        location /images/ {
-            alias /app/public/images/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000";
-        }
-
-        # Next.js static chunks
-        location /_next/static/ {
-            alias /app/.next/static/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-        }
-
-        # Handle all other requests
+        # For localhost/development, proceed with HTTP
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -83,22 +49,8 @@ http {
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' $cors_origin always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' '*' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' $cors_origin;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' '*';
-                add_header 'Access-Control-Allow-Credentials' 'true';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
         }
     }
 
@@ -115,35 +67,6 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
-        # Next.js static files
-        location /_next/ {
-            alias /app/.next/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-        }
-
-        # Public files
-        location /public/ {
-            alias /app/public/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000";
-        }
-
-        # Images
-        location /images/ {
-            alias /app/public/images/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000";
-        }
-
-        # Next.js static chunks
-        location /_next/static/ {
-            alias /app/.next/static/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-        }
-
-        # Handle all other requests
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -157,22 +80,20 @@ http {
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' $cors_origin always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' '*' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
 
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' $cors_origin;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' '*';
-                add_header 'Access-Control-Allow-Credentials' 'true';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
         }
     }
 }
