--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     map $http_origin $cors {
         default "";
-        ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
+        ~^https?://(.*\.technobar\.by|technobar\.by)$ $http_origin;
         "http://localhost" $http_origin;  # Allow localhost for development
     }
 
@@ -28,10 +28,10 @@ http {
     # HTTP server (redirect to HTTPS)
     server {
         listen 80;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru localhost;
+        server_name technobar.by *.technobar.by localhost;
         
         # For production domains, redirect to HTTPS
-        if ($host ~ ^(cvirko-vadim\.ru|.*\.cvirko-vadim\.ru)$) {
+        if ($host ~ ^(technobar\.by|.*\.technobar\.by)$) {
             return 301 https://$host$request_uri;
         }
 
@@ -57,11 +57,11 @@ http {
     # HTTPS server
     server {
         listen 443 ssl;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+        server_name technobar.by *.technobar.by;
 
         # SSL configuration
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
         ssl_session_timeout 1d;
         ssl_session_cache shared:SSL:50m;
         ssl_protocols TLSv1.2 TLSv1.3;
