--- a/nginx.conf
+++ b/nginx.conf
@@ -60,8 +60,8 @@ http {
         server_name technobar.by *.technobar.by;
 
         # SSL configuration
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/technobar.by-0001/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by-0001y/privkey.pem;
         ssl_session_timeout 1d;
         ssl_session_cache shared:SSL:50m;
         ssl_protocols TLSv1.2 TLSv1.3;
