--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,11 @@ http {
         listen 80;
         server_name technobar.by *.technobar.by localhost;
         
+        # Certbot challenge location
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+        
         # For production domains, redirect to HTTPS
         if ($host ~ ^(technobar\.by|.*\.technobar\.by)$) {
             return 301 https://$host$request_uri;
