--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,8 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
     # Logging configuration
     access_log /var/log/nginx/access.log;
@@ -25,48 +27,31 @@ http {
         keepalive 32;  # Keep connections alive
     }
 
-    # HTTP server (redirect to HTTPS)
+    # HTTP server
     server {
         listen 80;
-        server_name technobar.by *.technobar.by localhost;
+        server_name technobar.by www.technobar.by localhost;
         
         # Certbot challenge location
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
+            try_files $uri =404;
         }
         
         # For production domains, redirect to HTTPS
-        if ($host ~ ^(technobar\.by|.*\.technobar\.by)$) {
-            return 301 https://$host$request_uri;
-        }
-
-        # For localhost/development, proceed with HTTP
         location / {
-            proxy_pass http://nextjs;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-            
-            # Increase timeouts
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            return 301 https://$host$request_uri;
         }
     }
 
     # HTTPS server
     server {
         listen 443 ssl;
-        server_name technobar.by *.technobar.by;
+        server_name technobar.by www.technobar.by;
 
         # SSL configuration
-        ssl_certificate /etc/letsencrypt/live/technobar.by-0001/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by-0001/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
         ssl_session_timeout 1d;
         ssl_session_cache shared:SSL:50m;
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -84,18 +69,9 @@ http {
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
         }
 
         location /_next/ {
-            proxy_pass http://nextjs;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header Host $host;
-        }
-
-        location /static/ {
             proxy_pass http://nextjs;
             proxy_cache_bypass $http_upgrade;
             proxy_set_header Host $host;
