--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,7 @@ http {
     # HTTP server
     server {
         listen 80;
-        server_name cvirko-vadim.ru www.cvirko-vadim.ru localhost;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru localhost;
         
         # Certbot challenge location
         location /.well-known/acme-challenge/ {
@@ -47,7 +47,7 @@ http {
     # HTTPS server
     server {
         listen 443 ssl;
-        server_name cvirko-vadim.ru www.cvirko-vadim.ru
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru
 
         # SSL configuration
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
