--- a/nginx.conf
+++ b/nginx.conf
@@ -47,7 +47,7 @@ http {
     # HTTPS server
     server {
         listen 443 ssl;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru
+        server_name cvirko-vadim.ru 
 
         # SSL configuration
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
