--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events {
 }
 
 http {
-    # Basic settings
+    # Основные настройки
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -12,44 +12,45 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Logging configuration
+    # Логи
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log debug;
 
+    # CORS настройки
     map $http_origin $cors {
         default "";
         ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
-        "http://localhost" $http_origin;  # Allow localhost for development
+        "http://localhost" $http_origin;  # Разрешение для localhost в разработке
     }
 
     upstream nextjs {
         server nextjs-app:3000;
-        keepalive 32;  # Keep connections alive
+        keepalive 32;  # Удержание соединений
     }
 
-    # HTTP server
+    # HTTP сервер для 80 порта (редирект на HTTPS)
     server {
         listen 80;
         server_name cvirko-vadim.ru *.cvirko-vadim.ru localhost;
         
-        # Certbot challenge location
+        # Certbot challenge для SSL
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
             try_files $uri =404;
         }
         
-        # For production domains, redirect to HTTPS
+        # Редирект на HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
     }
 
-    # HTTPS server
+    # HTTPS сервер для 443 порта
     server {
         listen 443 ssl;
-       server_name cvirko-vadim.ru www.cvirko-vadim.ru;
+        server_name cvirko-vadim.ru www.cvirko-vadim.ru *.cvirko-vadim.ru;
 
-        # SSL configuration
+        # SSL конфигурация
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
         ssl_session_timeout 1d;
@@ -57,23 +58,60 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
+        # Статические файлы из /_next/
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+        }
+
+        # Обработка запросов для статики из папки public
         location / {
             proxy_pass http://nextjs;
-            proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            
-            # Increase timeouts
+
+            # Увеличение времени ожидания для проксирования
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
         }
 
+        # Разрешение CORS заголовков
+        add_header Access-Control-Allow-Origin $cors;
+        add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+        add_header Access-Control-Allow-Headers 'Content-Type, Authorization';
+    }
+
+    # Обработка поддоменов
+    server {
+        listen 443 ssl;
+        server_name phone.cvirko-vadim.ru;  # Пример поддомена
+
+        # SSL конфигурация
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+
+        # Проксирование запросов для поддомена
+        location / {
+            proxy_pass http://nextjs;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port 443;
+        }
+
+        # Статические файлы из /_next/
         location /_next/ {
             proxy_pass http://nextjs;
-            proxy_cache_bypass $http_upgrade;
             proxy_set_header Host $host;
         }
     }
