--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
 
     map $http_origin $cors {
         default "";
-        ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
+        ~^https?://(.*\.technobar\.by|technobar\.by)$ $http_origin;
         "http://localhost" $http_origin;  # Allow localhost for development
     }
 
@@ -30,7 +30,7 @@ http {
     # HTTP server
     server {
         listen 80;
-        server_name cvirko-vadim.ru www.cvirko-vadim.ru localhost;
+        server_name technobar.by www.technobar.by localhost;
         
         # Certbot challenge location
         location /.well-known/acme-challenge/ {
@@ -47,11 +47,11 @@ http {
     # HTTPS server
     server {
         listen 443 ssl;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+        server_name technobar.by *.technobar.by;
 
         # SSL configuration
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/technobar.by-0001/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by-0001/privkey.pem;
         ssl_session_timeout 1d;
         ssl_session_cache shared:SSL:50m;
         ssl_protocols TLSv1.2 TLSv1.3;
