--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-select": "^5.8.3",
