--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,26 @@
+version: '3.8'
 services:
   nextjs-app:
     build: .
-    ports:
-      - '3000:3000'
-    environment:
-      - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=https://cvirko-vadim.ru
-    volumes:
-      - ./data:/app/data:ro
+    container_name: next-app
     restart: always
-
-  certbot-renew:
-    image: certbot/certbot:latest
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - ./www:/var/www/certbot
-    entrypoint: >
-      sh -c "while :; do certbot renew --webroot -w /var/www/certbot --post-hook 'nginx -s reload'; sleep 12h; done"
-    restart: always
-  certbot:
-    image: certbot/certbot:latest
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - ./www:/var/www/certbot
-    command: certonly --webroot --webroot-path=/var/www/certbot --email your-email@example.com --agree-tos --no-eff-email -d cvirko-vadim.ru -d www.cvirko-vadim.ru --force-renewal
-    depends_on:
-      - nginx
 
   nginx:
-    image: nginx:latest
+    image: nginx:stable-alpine
+    container_name: nginx
     ports:
       - '80:80'
       - '443:443'
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - ./logs/nginx:/var/log/nginx
-      - ./www:/var/www/certbot
-      - ./public:/app/public
+      - ./nginx:/etc/nginx/conf.d
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - nextjs-app
     restart: always
-
-volumes:
-  nextjs_build:
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
