--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
 listen 80;
-server_name cvirko-vadim.ru *cvirko-vadim.ru www.cvirko-vadim.ru;
+server_name cvirko-vadim.ru www.cvirko-vadim.ru;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
