--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,31 @@
 version: '3.8'
+
 services:
-  nextjs-app:
-    build: .
-    container_name: next-app
-    restart: always
+  certbot:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./certbot:/etc/letsencrypt
+      - ./certbot:/var/lib/letsencrypt
+      - ./certbot/cloudflare.ini:/cloudflare.ini:ro
+    entrypoint: sh -c "trap exit TERM; while :; do sleep 3600 & wait $${!}; done"
 
   nginx:
     image: nginx:stable-alpine
-    container_name: nginx
+    depends_on:
+      - nextjs
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot:/etc/letsencrypt:ro
     ports:
       - '80:80'
       - '443:443'
-    volumes:
-      - ./nginx:/etc/nginx/conf.d
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
-    depends_on:
-      - nextjs-app
-    restart: always
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+
+  nextjs:
+    build:
+      context: .
+    ports:
+      - '3000:3000'
+    environment:
+      - NODE_ENV=production
