--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,21 +1,32 @@
-server {
-listen 80;
-server_name cvirko-vadim.ru www.cvirko-vadim.ru *.cvirko-vadim.ru;
-return 301 https://$host$request_uri;
-}
+events {}
 
-server {
-listen 443 ssl;
-server_name cvirko-vadim.ru www.cvirko-vadim.ru *.cvirko-vadim.ru;
+http {
+  include       mime.types;
+  default_type  application/octet-stream;
 
-    ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+  server {
+    listen 80;
+    server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
+
+  server {
+    listen 443 ssl;
+    server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+
+    ssl_certificate     /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
     location / {
-        proxy_pass http://next-app:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_pass         http://nextjs:3000;
+      proxy_http_version 1.1;
+      proxy_set_header   Upgrade $http_upgrade;
+      proxy_set_header   Connection 'upgrade';
+      proxy_set_header   Host $host;
+      proxy_cache_bypass $http_upgrade;
     }
-
+  }
 }
