--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
 
   server {
     listen 80;
-    server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+    server_name technobar.by.ru *.technobar.by.ru;
 
     location / {
       return 301 https://$host$request_uri;
@@ -15,10 +15,10 @@ http {
 
   server {
     listen 443 ssl;
-    server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+    server_name technobar.by.ru *.technobar.by.ru;
 
-    ssl_certificate     /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/technobar.by.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/technobar.by.ru/privkey.pem;
 
     location / {
       proxy_pass         http://nextjs:3000;
