--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,8 +17,8 @@ http {
     listen 443 ssl;
     server_name technobar.by.ru *.technobar.by.ru;
 
-    ssl_certificate     /etc/letsencrypt/live/technobar.by.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/technobar.by.ru/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/technobar.by-0001.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/technobar.by-0001.by/privkey.pem;
 
     location / {
       proxy_pass         http://nextjs:3000;
