--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
 
   server {
     listen 80;
-    server_name technobar.by.ru *.technobar.by.ru;
+    server_name technobar.by.ru *.technobar.by;
 
     location / {
       return 301 https://$host$request_uri;
