--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./certbot:/etc/letsencrypt
-      - ./certbot:/var/lib/letsencrypt
+      - ./certbot/etc/letsencrypt:/etc/letsencrypt
+      - ./certbot/var/lib/letsencrypt:/var/lib/letsencrypt
       - ./certbot/cloudflare.ini:/cloudflare.ini:ro
     entrypoint: sh -c "trap exit TERM; while :; do sleep 3600 & wait $${!}; done"
 
@@ -17,7 +17,7 @@ services:
       - nextjs
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certbot:/etc/letsencrypt:ro
+      - ./certbot/etc/letsencrypt:/etc/letsencrypt:ro
     ports:
       - '80:80'
       - '443:443'
