--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,73 @@
-# Игнорируем папку с локальными зависимостями
+# Dependencies
 node_modules
-
-# Логи и временные файлы
 npm-debug.log
 yarn-error.log
-pnpm-debug.log
+.pnp
+.pnp.js
 
-# IDE и редакторы
-.vscode
-.idea
+# Testing
+coverage
+.nyc_output
 
-# Docker файлы
-Dockerfile
-docker-compose.yml
+# Next.js
+.next
+out
+build
+dist
 
-# Системные файлы
+# Production
+*.log
+
+# Misc
 .DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+.env.development
+.env.test
+
+# Vercel
+.vercel
+
+# Typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+*~
+
+# Git
+.git
+.gitignore
+.gitattributes
+
+# Docker
+docker-compose.yml
+Dockerfile
+.dockerignore
+
+# CI/CD
+.github
+.gitlab-ci.yml
+
+# Certbot
+certbot/etc
+certbot/var
+
+# Scripts
+scripts
+*.sh
+
+# Documentation
+README.md
+*.md
