--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,58 @@
 version: '3.8'
 
 services:
-  certbot:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - ./certbot/etc/letsencrypt:/etc/letsencrypt
-      - ./certbot/var/lib/letsencrypt:/var/lib/letsencrypt
-      - ./certbot/cloudflare.ini:/cloudflare.ini:ro
-    entrypoint: sh -c "trap exit TERM; while :; do sleep 3600 & wait $${!}; done"
-
-  nginx:
-    image: nginx:stable-alpine
-    depends_on:
-      - nextjs
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-    ports:
-      - '80:80'
-      - '443:443'
-
   nextjs:
     build:
       context: .
-    ports:
-      - '3000:3000'
+      dockerfile: Dockerfile
+    container_name: bartech-nextjs
+    restart: unless-stopped
     environment:
       - NODE_ENV=production
+      - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  nginx:
+    image: nginx:stable-alpine
+    container_name: bartech-nginx
+    restart: unless-stopped
+    depends_on:
+      - nextjs
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - certbot-etc:/etc/letsencrypt:ro
+      - certbot-var:/var/lib/letsencrypt:ro
+    networks:
+      - app-network
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: bartech-certbot
+    restart: unless-stopped
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - ./certbot/cloudflare.ini:/cloudflare.ini:ro
+    networks:
+      - app-network
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --dns-cloudflare --dns-cloudflare-credentials /cloudflare.ini --quiet; sleep 12h & wait $${!}; done'"
+
+volumes:
+  certbot-etc:
+  certbot-var:
+
+networks:
+  app-network:
+    driver: bridge
