--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,32 +1,93 @@
-events {}
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-  include       mime.types;
-  default_type  application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-  server {
-    listen 80;
-    server_name technobar.by.ru *.technobar.by;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location / {
-      return 301 https://$host$request_uri;
+    access_log /var/log/nginx/access.log main;
+
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    client_max_body_size 20M;
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
+
+    # SSL Configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # HTTP to HTTPS redirect
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+
+        # Let's Encrypt challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
-  }
 
-  server {
-    listen 443 ssl;
-    server_name technobar.by.ru *.technobar.by.ru;
+    # HTTPS server for main domain and all subdomains
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
 
-    ssl_certificate     /etc/letsencrypt/live/technobar.by-0001/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/technobar.by-0001/privkey.pem;  
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
-    location / {
-      proxy_pass         http://nextjs:3000;
-      proxy_http_version 1.1;
-      proxy_set_header   Upgrade $http_upgrade;
-      proxy_set_header   Connection 'upgrade';
-      proxy_set_header   Host $host;
-      proxy_cache_bypass $http_upgrade;
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        # Proxy settings
+        location / {
+            proxy_pass http://nextjs:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
+
+        # Health check endpoint
+        location /api/health {
+            proxy_pass http://nextjs:3000/api/health;
+            access_log off;
+        }
     }
-  }
 }
