--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
       - '443:443'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - certbot-etc:/etc/letsencrypt:ro
-      - certbot-var:/var/lib/letsencrypt:ro
+      - cvirko-vadim_certbot-etc:/etc/letsencrypt:ro
+      - cvirko-vadim_certbot-var:/var/lib/letsencrypt:ro
     networks:
       - app-network
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
@@ -42,16 +42,18 @@ services:
     container_name: bartech-certbot
     restart: unless-stopped
     volumes:
-      - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/lib/letsencrypt
+      - cvirko-vadim_certbot-etc:/etc/letsencrypt
+      - cvirko-vadim_certbot-var:/var/lib/letsencrypt
       - ./certbot/cloudflare.ini:/cloudflare.ini:ro
     networks:
       - app-network
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --dns-cloudflare --dns-cloudflare-credentials /cloudflare.ini --quiet; sleep 12h & wait $${!}; done'"
 
 volumes:
-  certbot-etc:
-  certbot-var:
+  cvirko-vadim_certbot-etc:
+    external: true
+  cvirko-vadim_certbot-var:
+    external: true
 
 networks:
   app-network:
