--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,6 +60,7 @@ http {
         listen [::]:443 ssl http2;
         server_name cvirko-vadim.ru *.cvirko-vadim.ru;
 
+        # Wildcard SSL certificate for cvirko-vadim.ru and *.cvirko-vadim.ru
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
