--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+        server_name technobar.by *.technobar.by;
 
         # Let's Encrypt challenge
         location /.well-known/acme-challenge/ {
@@ -58,11 +58,11 @@ http {
     server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+        server_name technobar.by *.technobar.by;
 
-        # Wildcard SSL certificate for cvirko-vadim.ru and *.cvirko-vadim.ru
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        # Wildcard SSL certificate for technobar.by and *.technobar.by
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
 
         # Security headers
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
