--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -109,10 +109,32 @@ http {
             add_header Cache-Control "public, max-age=2592000" always;
         }
 
-        # Health check endpoint
+        # API endpoints - отключаем кеширование для всех API запросов
+        location /api/ {
+            proxy_pass http://nextjs:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+            
+            # Отключаем кеширование для всех API ответов
+            proxy_hide_header Cache-Control;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate" always;
+            add_header Pragma "no-cache" always;
+            add_header Expires "0" always;
+        }
+        
+        # Health check endpoint (специальная обработка)
         location /api/health {
             proxy_pass http://nextjs:3000/api/health;
             access_log off;
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
         }
     }
 }
